corrected the header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header class="header">
-        <div class="container heder_container">
+        <div class="container heder__container">
            <nav class="header_name">
                 <ul class="menu-list" >
-                    <li><a class="menu_item" href="">RACING</a></li>
-                    <li><a class="menu_item" href="">AUTOMOTIVE</a></li>
-                    <li><a class="menu_item" href="">GROUP</a></li>
-                    <li><a class="menu_item" href="">CAREERS</a></li>
-                    <li><a class="menu_item" href="">STORE</a></li>
+                    <li class="menu_item"><a href="" class="menu">RACING</a></li>
+                    <li class="menu_item"><a href="" class="menu">AUTOMOTIVE</a></li>
+                    <li class="menu_item"><a href="" class="menu">GROUP</a></li>
+                    <li class="menu_item"><a href="" class="menu">CAREERS</a></li>
+                    <li class="menu_item"><a href="" class="menu">STORE</a></li>
                 </ul>
            </nav>
         </div>
